dataset1235/2025-2/1955397009/users/3218273088/executions/3239899347_3348296077.log
== RUN (2025-08-28 12:32:11)
-- CODE: 
H=float(input("digite hora"))
te=(H*15)
subtotal=(te+5)
total=((subtotal)*20/100)
print(round(total,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
24.0
---- user output:
digite hora4.0
-- TEST CASE 2:
---- input:
7
---- correct output:
132.0
---- user output:
digite hora22.0
-- TEST CASE 3:
---- input:
9
---- correct output:
168.0
---- user output:
digite hora28.0
-- TEST CASE 4:
---- input:
3
---- correct output:
60.0
---- user output:
digite hora10.0
-- TEST CASE 5:
---- input:
5
---- correct output:
96.0
---- user output:
digite hora16.0
-- TEST CASE 6:
---- input:
25
---- correct output:
456.0
---- user output:
digite hora76.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:17:29)
-- CODE: 
H=float(input("hora"))
te=(H*15)
subtotal=te+5
total=((subtotal)*20/100)
print(round("total",2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
24.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round("total",2))
          ^^^^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
-- TEST CASE 2:
---- input:
7
---- correct output:
132.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round("total",2))
          ^^^^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
-- TEST CASE 3:
---- input:
9
---- correct output:
168.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round("total",2))
          ^^^^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
-- TEST CASE 4:
---- input:
3
---- correct output:
60.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round("total",2))
          ^^^^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
-- TEST CASE 5:
---- input:
5
---- correct output:
96.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round("total",2))
          ^^^^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
-- TEST CASE 6:
---- input:
25
---- correct output:
456.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round("total",2))
          ^^^^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:17:52)
-- CODE: 
H=float(input(hora))
te=(H*15)
subtotal=te+5
total=((subtotal)*20/100)
print(round("total",2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
24.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    H=float(input(hora))
                  ^^^^
NameError: name 'hora' is not defined
-- TEST CASE 2:
---- input:
7
---- correct output:
132.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    H=float(input(hora))
                  ^^^^
NameError: name 'hora' is not defined
-- TEST CASE 3:
---- input:
9
---- correct output:
168.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    H=float(input(hora))
                  ^^^^
NameError: name 'hora' is not defined
-- TEST CASE 4:
---- input:
3
---- correct output:
60.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    H=float(input(hora))
                  ^^^^
NameError: name 'hora' is not defined
-- TEST CASE 5:
---- input:
5
---- correct output:
96.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    H=float(input(hora))
                  ^^^^
NameError: name 'hora' is not defined
-- TEST CASE 6:
---- input:
25
---- correct output:
456.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    H=float(input(hora))
                  ^^^^
NameError: name 'hora' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:33:12)
-- CODE: 
H=float(input("digite hora"))
t=(H*15)
subtotal=(t+5)
total=((subtotal)*20/100)
print(round(total,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
24.0
---- user output:
digite hora4.0
-- TEST CASE 2:
---- input:
7
---- correct output:
132.0
---- user output:
digite hora22.0
-- TEST CASE 3:
---- input:
9
---- correct output:
168.0
---- user output:
digite hora28.0
-- TEST CASE 4:
---- input:
3
---- correct output:
60.0
---- user output:
digite hora10.0
-- TEST CASE 5:
---- input:
5
---- correct output:
96.0
---- user output:
digite hora16.0
-- TEST CASE 6:
---- input:
25
---- correct output:
456.0
---- user output:
digite hora76.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:18:15)
-- CODE: 
H=float(input(hora))
te=(H*15)
subtotal=(te+5)
total=((subtotal)*20/100)
print(round("total",2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
24.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    H=float(input(hora))
                  ^^^^
NameError: name 'hora' is not defined
-- TEST CASE 2:
---- input:
7
---- correct output:
132.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    H=float(input(hora))
                  ^^^^
NameError: name 'hora' is not defined
-- TEST CASE 3:
---- input:
9
---- correct output:
168.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    H=float(input(hora))
                  ^^^^
NameError: name 'hora' is not defined
-- TEST CASE 4:
---- input:
3
---- correct output:
60.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    H=float(input(hora))
                  ^^^^
NameError: name 'hora' is not defined
-- TEST CASE 5:
---- input:
5
---- correct output:
96.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    H=float(input(hora))
                  ^^^^
NameError: name 'hora' is not defined
-- TEST CASE 6:
---- input:
25
---- correct output:
456.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    H=float(input(hora))
                  ^^^^
NameError: name 'hora' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 12:33:28)
-- CODE: 
H=float(input("digite hora"))
t=(H*15)
subtotal=(t+5)
total=((subtotal)*20/100)
print(round(total,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1
---- correct output:
24.0
---- user output:
digite hora4.0
-- TEST CASE 2:
---- input:
7
---- correct output:
132.0
---- user output:
digite hora22.0
-- TEST CASE 3:
---- input:
9
---- correct output:
168.0
---- user output:
digite hora28.0
-- TEST CASE 4:
---- input:
3
---- correct output:
60.0
---- user output:
digite hora10.0
-- TEST CASE 5:
---- input:
5
---- correct output:
96.0
---- user output:
digite hora16.0
-- TEST CASE 6:
---- input:
25
---- correct output:
456.0
---- user output:
digite hora76.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:24:17)
-- CODE: 
H=float(input("digite hora"))
te=(H*15)
subtotal=(te+5)
total=((subtotal)*20/100)
print(round("total",2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
24.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round("total",2))
          ^^^^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
-- TEST CASE 2:
---- input:
7
---- correct output:
132.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round("total",2))
          ^^^^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
-- TEST CASE 3:
---- input:
9
---- correct output:
168.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round("total",2))
          ^^^^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
-- TEST CASE 4:
---- input:
3
---- correct output:
60.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round("total",2))
          ^^^^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
-- TEST CASE 5:
---- input:
5
---- correct output:
96.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round("total",2))
          ^^^^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
-- TEST CASE 6:
---- input:
25
---- correct output:
456.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round("total",2))
          ^^^^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 12:32:25)
-- CODE: 
H=float(input("digite hora"))
te=(H*15)
subtotal=(te+5)
total=((subtotal)*20/100)
print(round(total,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1
---- correct output:
24.0
---- user output:
digite hora4.0
-- TEST CASE 2:
---- input:
7
---- correct output:
132.0
---- user output:
digite hora22.0
-- TEST CASE 3:
---- input:
9
---- correct output:
168.0
---- user output:
digite hora28.0
-- TEST CASE 4:
---- input:
3
---- correct output:
60.0
---- user output:
digite hora10.0
-- TEST CASE 5:
---- input:
5
---- correct output:
96.0
---- user output:
digite hora16.0
-- TEST CASE 6:
---- input:
25
---- correct output:
456.0
---- user output:
digite hora76.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:16:01)
-- CODE: 
H=float(input("hora"))
te=(H*15)
subtotal=te+5
total=(subtotal)*0,20
print(round("total",2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
24.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round("total",2))
          ^^^^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
-- TEST CASE 2:
---- input:
7
---- correct output:
132.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round("total",2))
          ^^^^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
-- TEST CASE 3:
---- input:
9
---- correct output:
168.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round("total",2))
          ^^^^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
-- TEST CASE 4:
---- input:
3
---- correct output:
60.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round("total",2))
          ^^^^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
-- TEST CASE 5:
---- input:
5
---- correct output:
96.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round("total",2))
          ^^^^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
-- TEST CASE 6:
---- input:
25
---- correct output:
456.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round("total",2))
          ^^^^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:17:53)
-- CODE: 
H=float(input(hora))
te=(H*15)
subtotal=te+5
total=((subtotal)*20/100)
print(round("total",2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
24.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    H=float(input(hora))
                  ^^^^
NameError: name 'hora' is not defined
-- TEST CASE 2:
---- input:
7
---- correct output:
132.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    H=float(input(hora))
                  ^^^^
NameError: name 'hora' is not defined
-- TEST CASE 3:
---- input:
9
---- correct output:
168.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    H=float(input(hora))
                  ^^^^
NameError: name 'hora' is not defined
-- TEST CASE 4:
---- input:
3
---- correct output:
60.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    H=float(input(hora))
                  ^^^^
NameError: name 'hora' is not defined
-- TEST CASE 5:
---- input:
5
---- correct output:
96.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    H=float(input(hora))
                  ^^^^
NameError: name 'hora' is not defined
-- TEST CASE 6:
---- input:
25
---- correct output:
456.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    H=float(input(hora))
                  ^^^^
NameError: name 'hora' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 12:42:24)
-- CODE: 
H=float(input("digite hora"))
t=(H*15)+5
p=(t*20/100)
total=(t+p)
print(round(total,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1
---- correct output:
24.0
---- user output:
digite hora24.0
-- TEST CASE 2:
---- input:
7
---- correct output:
132.0
---- user output:
digite hora132.0
-- TEST CASE 3:
---- input:
9
---- correct output:
168.0
---- user output:
digite hora168.0
-- TEST CASE 4:
---- input:
3
---- correct output:
60.0
---- user output:
digite hora60.0
-- TEST CASE 5:
---- input:
5
---- correct output:
96.0
---- user output:
digite hora96.0
-- TEST CASE 6:
---- input:
25
---- correct output:
456.0
---- user output:
digite hora456.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:16:42)
-- CODE: 
H=float(input("hora"))
te=(H*15)
subtotal=te+5
total=(subtotal)*20/100
print(round("total",2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
24.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round("total",2))
          ^^^^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
-- TEST CASE 2:
---- input:
7
---- correct output:
132.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round("total",2))
          ^^^^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
-- TEST CASE 3:
---- input:
9
---- correct output:
168.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round("total",2))
          ^^^^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
-- TEST CASE 4:
---- input:
3
---- correct output:
60.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round("total",2))
          ^^^^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
-- TEST CASE 5:
---- input:
5
---- correct output:
96.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round("total",2))
          ^^^^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
-- TEST CASE 6:
---- input:
25
---- correct output:
456.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round("total",2))
          ^^^^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:15:44)
-- CODE: 
H=float(input("hora"))
te=(H*15)
subtotal=te+5
total=(subtotal)*0,20
print(round(total,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
24.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(total,2))
          ^^^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
-- TEST CASE 2:
---- input:
7
---- correct output:
132.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(total,2))
          ^^^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
-- TEST CASE 3:
---- input:
9
---- correct output:
168.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(total,2))
          ^^^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
-- TEST CASE 4:
---- input:
3
---- correct output:
60.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(total,2))
          ^^^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
-- TEST CASE 5:
---- input:
5
---- correct output:
96.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(total,2))
          ^^^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
-- TEST CASE 6:
---- input:
25
---- correct output:
456.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(total,2))
          ^^^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:32:27)
-- CODE: 
H=float(input("digite hora"))
te=(H*15)
subtotal=(te+5)
total=((subtotal)*20/100)
print(round(total,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
24.0
---- user output:
digite hora4.0
-- TEST CASE 2:
---- input:
7
---- correct output:
132.0
---- user output:
digite hora22.0
-- TEST CASE 3:
---- input:
9
---- correct output:
168.0
---- user output:
digite hora28.0
-- TEST CASE 4:
---- input:
3
---- correct output:
60.0
---- user output:
digite hora10.0
-- TEST CASE 5:
---- input:
5
---- correct output:
96.0
---- user output:
digite hora16.0
-- TEST CASE 6:
---- input:
25
---- correct output:
456.0
---- user output:
digite hora76.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:17:45)
-- CODE: 
H=float(input(hora))
te=(H*15)
subtotal=te+5
total=((subtotal)*20/100)
print(round("total",2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
24.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    H=float(input(hora))
                  ^^^^
NameError: name 'hora' is not defined
-- TEST CASE 2:
---- input:
7
---- correct output:
132.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    H=float(input(hora))
                  ^^^^
NameError: name 'hora' is not defined
-- TEST CASE 3:
---- input:
9
---- correct output:
168.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    H=float(input(hora))
                  ^^^^
NameError: name 'hora' is not defined
-- TEST CASE 4:
---- input:
3
---- correct output:
60.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    H=float(input(hora))
                  ^^^^
NameError: name 'hora' is not defined
-- TEST CASE 5:
---- input:
5
---- correct output:
96.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    H=float(input(hora))
                  ^^^^
NameError: name 'hora' is not defined
-- TEST CASE 6:
---- input:
25
---- correct output:
456.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    H=float(input(hora))
                  ^^^^
NameError: name 'hora' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:17:29)
-- CODE: 
H=float(input("hora"))
te=(H*15)
subtotal=te+5
total=((subtotal)*20/100)
print(round("total",2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
24.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round("total",2))
          ^^^^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
-- TEST CASE 2:
---- input:
7
---- correct output:
132.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round("total",2))
          ^^^^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
-- TEST CASE 3:
---- input:
9
---- correct output:
168.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round("total",2))
          ^^^^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
-- TEST CASE 4:
---- input:
3
---- correct output:
60.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round("total",2))
          ^^^^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
-- TEST CASE 5:
---- input:
5
---- correct output:
96.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round("total",2))
          ^^^^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
-- TEST CASE 6:
---- input:
25
---- correct output:
456.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round("total",2))
          ^^^^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:17:51)
-- CODE: 
H=float(input(hora))
te=(H*15)
subtotal=te+5
total=((subtotal)*20/100)
print(round("total",2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
24.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    H=float(input(hora))
                  ^^^^
NameError: name 'hora' is not defined
-- TEST CASE 2:
---- input:
7
---- correct output:
132.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    H=float(input(hora))
                  ^^^^
NameError: name 'hora' is not defined
-- TEST CASE 3:
---- input:
9
---- correct output:
168.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    H=float(input(hora))
                  ^^^^
NameError: name 'hora' is not defined
-- TEST CASE 4:
---- input:
3
---- correct output:
60.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    H=float(input(hora))
                  ^^^^
NameError: name 'hora' is not defined
-- TEST CASE 5:
---- input:
5
---- correct output:
96.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    H=float(input(hora))
                  ^^^^
NameError: name 'hora' is not defined
-- TEST CASE 6:
---- input:
25
---- correct output:
456.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    H=float(input(hora))
                  ^^^^
NameError: name 'hora' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:19:03)
-- CODE: 
H=float(input("digite hora")
te=(H*15)
subtotal=(te+5)
total=((subtotal)*20/100)
print(round("total",2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
24.0
-- ERROR:
File "XXXX", line 1
    H=float(input("digite hora")
           ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
7
---- correct output:
132.0
-- ERROR:
File "XXXX", line 1
    H=float(input("digite hora")
           ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
9
---- correct output:
168.0
-- ERROR:
File "XXXX", line 1
    H=float(input("digite hora")
           ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
3
---- correct output:
60.0
-- ERROR:
File "XXXX", line 1
    H=float(input("digite hora")
           ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
5
---- correct output:
96.0
-- ERROR:
File "XXXX", line 1
    H=float(input("digite hora")
           ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
25
---- correct output:
456.0
-- ERROR:
File "XXXX", line 1
    H=float(input("digite hora")
           ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:34:42)
-- CODE: 
H=float(input("digite hora"))
t=(H*15)
subtotal=(t+5)
total=((subtotal)*20/100)
print(round(total,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
24.0
---- user output:
digite hora4.0
-- TEST CASE 2:
---- input:
7
---- correct output:
132.0
---- user output:
digite hora22.0
-- TEST CASE 3:
---- input:
9
---- correct output:
168.0
---- user output:
digite hora28.0
-- TEST CASE 4:
---- input:
3
---- correct output:
60.0
---- user output:
digite hora10.0
-- TEST CASE 5:
---- input:
5
---- correct output:
96.0
---- user output:
digite hora16.0
-- TEST CASE 6:
---- input:
25
---- correct output:
456.0
---- user output:
digite hora76.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:18:43)
-- CODE: 
H=float(input("digite hora")
te=(H*15)
subtotal=(te+5)
total=((subtotal)*20/100)
print(round("total",2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
24.0
-- ERROR:
File "XXXX", line 1
    H=float(input("digite hora")
           ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
7
---- correct output:
132.0
-- ERROR:
File "XXXX", line 1
    H=float(input("digite hora")
           ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
9
---- correct output:
168.0
-- ERROR:
File "XXXX", line 1
    H=float(input("digite hora")
           ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
3
---- correct output:
60.0
-- ERROR:
File "XXXX", line 1
    H=float(input("digite hora")
           ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
5
---- correct output:
96.0
-- ERROR:
File "XXXX", line 1
    H=float(input("digite hora")
           ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
25
---- correct output:
456.0
-- ERROR:
File "XXXX", line 1
    H=float(input("digite hora")
           ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:33:18)
-- CODE: 
H=float(input("digite hora"))
t=(H*15)
subtotal=(t+5)
total=((subtotal)*20/100)
print(round(total,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
24.0
---- user output:
digite hora4.0
-- TEST CASE 2:
---- input:
7
---- correct output:
132.0
---- user output:
digite hora22.0
-- TEST CASE 3:
---- input:
9
---- correct output:
168.0
---- user output:
digite hora28.0
-- TEST CASE 4:
---- input:
3
---- correct output:
60.0
---- user output:
digite hora10.0
-- TEST CASE 5:
---- input:
5
---- correct output:
96.0
---- user output:
digite hora16.0
-- TEST CASE 6:
---- input:
25
---- correct output:
456.0
---- user output:
digite hora76.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:37:34)
-- CODE: 
H=float(input("digite hora"))
t=(H*15)+5
total=((subtotal)*20/100)
print(round(total,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
24.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total=((subtotal)*20/100)
            ^^^^^^^^
NameError: name 'subtotal' is not defined
-- TEST CASE 2:
---- input:
7
---- correct output:
132.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total=((subtotal)*20/100)
            ^^^^^^^^
NameError: name 'subtotal' is not defined
-- TEST CASE 3:
---- input:
9
---- correct output:
168.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total=((subtotal)*20/100)
            ^^^^^^^^
NameError: name 'subtotal' is not defined
-- TEST CASE 4:
---- input:
3
---- correct output:
60.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total=((subtotal)*20/100)
            ^^^^^^^^
NameError: name 'subtotal' is not defined
-- TEST CASE 5:
---- input:
5
---- correct output:
96.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total=((subtotal)*20/100)
            ^^^^^^^^
NameError: name 'subtotal' is not defined
-- TEST CASE 6:
---- input:
25
---- correct output:
456.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total=((subtotal)*20/100)
            ^^^^^^^^
NameError: name 'subtotal' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:41:57)
-- CODE: 
H=float(input("digite hora"))
t=(H*15)+5
p=(t*2/100)
total=(t+p)
print(round(total,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
24.0
---- user output:
digite hora20.4
-- TEST CASE 2:
---- input:
7
---- correct output:
132.0
---- user output:
digite hora112.2
-- TEST CASE 3:
---- input:
9
---- correct output:
168.0
---- user output:
digite hora142.8
-- TEST CASE 4:
---- input:
3
---- correct output:
60.0
---- user output:
digite hora51.0
-- TEST CASE 5:
---- input:
5
---- correct output:
96.0
---- user output:
digite hora81.6
-- TEST CASE 6:
---- input:
25
---- correct output:
456.0
---- user output:
digite hora387.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:19:19)
-- CODE: 
H=(input("digite hora")
te=(H*15)
subtotal=(te+5)
total=((subtotal)*20/100)
print(round("total",2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
24.0
-- ERROR:
File "XXXX", line 1
    H=(input("digite hora")
      ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
7
---- correct output:
132.0
-- ERROR:
File "XXXX", line 1
    H=(input("digite hora")
      ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
9
---- correct output:
168.0
-- ERROR:
File "XXXX", line 1
    H=(input("digite hora")
      ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
3
---- correct output:
60.0
-- ERROR:
File "XXXX", line 1
    H=(input("digite hora")
      ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
5
---- correct output:
96.0
-- ERROR:
File "XXXX", line 1
    H=(input("digite hora")
      ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
25
---- correct output:
456.0
-- ERROR:
File "XXXX", line 1
    H=(input("digite hora")
      ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 12:19:04)
-- CODE: 
H=float(input("digite hora")
te=(H*15)
subtotal=(te+5)
total=((subtotal)*20/100)
print(round("total",2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
24.0
-- ERROR:
File "XXXX", line 1
    H=float(input("digite hora")
           ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
7
---- correct output:
132.0
-- ERROR:
File "XXXX", line 1
    H=float(input("digite hora")
           ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
9
---- correct output:
168.0
-- ERROR:
File "XXXX", line 1
    H=float(input("digite hora")
           ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
3
---- correct output:
60.0
-- ERROR:
File "XXXX", line 1
    H=float(input("digite hora")
           ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
5
---- correct output:
96.0
-- ERROR:
File "XXXX", line 1
    H=float(input("digite hora")
           ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
25
---- correct output:
456.0
-- ERROR:
File "XXXX", line 1
    H=float(input("digite hora")
           ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:38:03)
-- CODE: 
H=float(input("digite hora"))
t=(H*15)+5
total=((t)*20/100)
print(round(total,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
24.0
---- user output:
digite hora4.0
-- TEST CASE 2:
---- input:
7
---- correct output:
132.0
---- user output:
digite hora22.0
-- TEST CASE 3:
---- input:
9
---- correct output:
168.0
---- user output:
digite hora28.0
-- TEST CASE 4:
---- input:
3
---- correct output:
60.0
---- user output:
digite hora10.0
-- TEST CASE 5:
---- input:
5
---- correct output:
96.0
---- user output:
digite hora16.0
-- TEST CASE 6:
---- input:
25
---- correct output:
456.0
---- user output:
digite hora76.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:33:23)
-- CODE: 
H=float(input("digite hora"))
t=(H*15)
subtotal=(t+5)
total=((subtotal)*20/100)
print(round(total,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
24.0
---- user output:
digite hora4.0
-- TEST CASE 2:
---- input:
7
---- correct output:
132.0
---- user output:
digite hora22.0
-- TEST CASE 3:
---- input:
9
---- correct output:
168.0
---- user output:
digite hora28.0
-- TEST CASE 4:
---- input:
3
---- correct output:
60.0
---- user output:
digite hora10.0
-- TEST CASE 5:
---- input:
5
---- correct output:
96.0
---- user output:
digite hora16.0
-- TEST CASE 6:
---- input:
25
---- correct output:
456.0
---- user output:
digite hora76.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:19:08)
-- CODE: 
H=float(input("digite hora")
te=(H*15)
subtotal=(te+5)
total=((subtotal)*20/100)
print(round("total",2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
24.0
-- ERROR:
File "XXXX", line 1
    H=float(input("digite hora")
           ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
7
---- correct output:
132.0
-- ERROR:
File "XXXX", line 1
    H=float(input("digite hora")
           ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
9
---- correct output:
168.0
-- ERROR:
File "XXXX", line 1
    H=float(input("digite hora")
           ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
3
---- correct output:
60.0
-- ERROR:
File "XXXX", line 1
    H=float(input("digite hora")
           ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
5
---- correct output:
96.0
-- ERROR:
File "XXXX", line 1
    H=float(input("digite hora")
           ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
25
---- correct output:
456.0
-- ERROR:
File "XXXX", line 1
    H=float(input("digite hora")
           ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:17:50)
-- CODE: 
H=float(input(hora))
te=(H*15)
subtotal=te+5
total=((subtotal)*20/100)
print(round("total",2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
24.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    H=float(input(hora))
                  ^^^^
NameError: name 'hora' is not defined
-- TEST CASE 2:
---- input:
7
---- correct output:
132.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    H=float(input(hora))
                  ^^^^
NameError: name 'hora' is not defined
-- TEST CASE 3:
---- input:
9
---- correct output:
168.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    H=float(input(hora))
                  ^^^^
NameError: name 'hora' is not defined
-- TEST CASE 4:
---- input:
3
---- correct output:
60.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    H=float(input(hora))
                  ^^^^
NameError: name 'hora' is not defined
-- TEST CASE 5:
---- input:
5
---- correct output:
96.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    H=float(input(hora))
                  ^^^^
NameError: name 'hora' is not defined
-- TEST CASE 6:
---- input:
25
---- correct output:
456.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    H=float(input(hora))
                  ^^^^
NameError: name 'hora' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:17:55)
-- CODE: 
H=float(input(hora))
te=(H*15)
subtotal=te+5
total=((subtotal)*20/100)
print(round("total",2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
24.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    H=float(input(hora))
                  ^^^^
NameError: name 'hora' is not defined
-- TEST CASE 2:
---- input:
7
---- correct output:
132.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    H=float(input(hora))
                  ^^^^
NameError: name 'hora' is not defined
-- TEST CASE 3:
---- input:
9
---- correct output:
168.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    H=float(input(hora))
                  ^^^^
NameError: name 'hora' is not defined
-- TEST CASE 4:
---- input:
3
---- correct output:
60.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    H=float(input(hora))
                  ^^^^
NameError: name 'hora' is not defined
-- TEST CASE 5:
---- input:
5
---- correct output:
96.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    H=float(input(hora))
                  ^^^^
NameError: name 'hora' is not defined
-- TEST CASE 6:
---- input:
25
---- correct output:
456.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    H=float(input(hora))
                  ^^^^
NameError: name 'hora' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:15:05)
-- CODE: 
H=float(input("hora"))
te=(H*15)
subtotal=te+5
total=(subtotal)*0,20
print(round(total))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
24.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(total))
          ^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
-- TEST CASE 2:
---- input:
7
---- correct output:
132.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(total))
          ^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
-- TEST CASE 3:
---- input:
9
---- correct output:
168.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(total))
          ^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
-- TEST CASE 4:
---- input:
3
---- correct output:
60.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(total))
          ^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
-- TEST CASE 5:
---- input:
5
---- correct output:
96.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(total))
          ^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
-- TEST CASE 6:
---- input:
25
---- correct output:
456.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(total))
          ^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:42:19)
-- CODE: 
H=float(input("digite hora"))
t=(H*15)+5
p=(t*20/100)
total=(t+p)
print(round(total,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
24.0
---- user output:
digite hora24.0
-- TEST CASE 2:
---- input:
7
---- correct output:
132.0
---- user output:
digite hora132.0
-- TEST CASE 3:
---- input:
9
---- correct output:
168.0
---- user output:
digite hora168.0
-- TEST CASE 4:
---- input:
3
---- correct output:
60.0
---- user output:
digite hora60.0
-- TEST CASE 5:
---- input:
5
---- correct output:
96.0
---- user output:
digite hora96.0
-- TEST CASE 6:
---- input:
25
---- correct output:
456.0
---- user output:
digite hora456.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
